added build command

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "source": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server.js",
+    "start-builded-project": "node index.js",
+    "build": "npx parcel build src/server.js"
   },
   "keywords": [],
   "author": "",
